# querent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  install.sh  package-lock.json  package.json  pnpm-lock.yaml  rian_apple_key_tauri.p8
querent/: .cargo-deny.toml  Cargo.toml  Makefile
querent/actors/: Cargo.toml  Readme.md
querent/actors/src/: actor.rs  actor_context.rs  actor_handle.rs  actor_state.rs  channel_with_priority.rs  command.rs  envelope.rs  lib.rs  messagebus.rs  observation.rs  querent.rs  registry.rs  scheduler.rs  spawn_builder.rs  supervisor.rs  tests.rs
querent/cluster/: Cargo.toml
querent/cluster/src/: change.rs  cluster.rs  grpc_service.rs  lib.rs  member.rs  metrics.rs  node.rs  types.rs
querent/codegen/: Cargo.toml
querent/codegen/src/: codegen.rs  lib.rs
querent/common/: Cargo.toml
querent/common/src/: error.rs  event_payload_types.rs  lib.rs  metrics.rs  net.rs  progress.rs  pubsub.rs  quid.rs  retry.rs  runtimes.rs  sorted_iter.rs  stream_utils.rs  terminate_sig.rs  type_map.rs  utils.rs
querent/common/src/memory/: dummy_memory.rs  mod.rs  owned_bytes.rs  simple_memory.rs  window_buffer.rs
querent/common/src/schemas/: agent.rs  document.rs  memory.rs  messages.rs  mod.rs  retrivers.rs  simple_kg.rs  stream.rs  tools_openai_like.rs
querent/common/src/streaming/: byte_stream_reader.rs  mod.rs
querent/common/src/tools/: mod.rs  tool.rs
querent/common/src/tower/: box_layer.rs  box_service.rs  buffer.rs  change.rs  estimate_rate.rs  event_listener.rs  metrics.rs  mod.rs  pool.rs  rate.rs  rate_estimator.rs  rate_limit.rs  retry.rs  transport.rs
querent/common/src/types/: event_streamer.rs  indexer.rs  ingestors.rs  mod.rs  semantic_api.rs  sources.rs  storage_mapper.rs
querent/engines/: Cargo.toml
querent/engines/src/: engines.rs  lib.rs  utils.rs
querent/engines/src/agn/: attention_based_filter.rs  attention_based_search.rs  attention_tensors.rs  mod.rs
querent/engines/src/mock/: mock_engine.rs  mod.rs
querent/engines/src/temporal/: mod.rs  temporal.rs
querent/ingestors/: Cargo.toml
querent/ingestors/src/: ingestor.rs  lib.rs
querent/ingestors/src/audio/: audio.rs  mod.rs
querent/ingestors/src/code/: code.rs  mod.rs
querent/ingestors/src/csv/: csv.rs  mod.rs
querent/ingestors/src/doc/: doc.rs  mod.rs
querent/ingestors/src/document/: block_quote.rs  code.rs  document.rs  document_meta.rs  heading.rs  image.rs  inline_code.rs  inline_math.rs  list.rs  list_item.rs  math.rs  node.rs  paragraph.rs  point.rs  position.rs  table.rs  table_cell.rs  table_row.rs  text.rs  text_group.rs
querent/ingestors/src/docx/: docx.rs  mod.rs
querent/ingestors/src/email/: email.rs
querent/ingestors/src/html/: html.rs  mod.rs  parser.rs
querent/ingestors/src/image/: image.rs  mod.rs
querent/ingestors/src/json/: json.rs  mod.rs
querent/insights/: Cargo.toml
querent/insights/src/: insight_utils.rs  insights.rs  lib.rs  types.rs
querent/layers/: Cargo.toml
querent/layers/src/: layers.rs  lib.rs
querent/llms/: Cargo.toml
querent/llms/src/: lib.rs  llm.rs  options.rs  utils.rs
querent/node/: Cargo.toml  build.rs  tauri.conf.json
querent/node/src/: lib.rs  main.rs
querent/proto/: Cargo.toml  build.rs
querent/proto/src/: config.rs  error.rs  lib.rs
querent/rian/: Cargo.toml
querent/rian/src/: lib.rs
querent/sources/: Cargo.toml
querent/sources/src/: lib.rs  source.rs
querent/storage/: Cargo.toml
querent/storage/sql/: discovered_knowledge.sql  semantic_knowledge.sql
querent/storage/src/: lib.rs  repository.rs  storage.rs
querent/strataiq/: Cargo.toml
querent/test_data/: dc_universe.xml  sample-document.docx
quester/: .cargo-deny.toml  Cargo.toml  Cross.toml  Makefile  deny.toml  diesel.toml  rust-toolchain.toml
quester/actors/: Cargo.toml
quester/actors/src/: actor.rs  actor_context.rs  actor_handle.rs  actor_state.rs  channel_with_priority.rs  command.rs  envelope.rs  lib.rs  mailbox.rs  messagebus.rs  observation.rs  quester.rs  registry.rs  scheduler.rs  spawn_builder.rs  supervisor.rs  tests.rs  universe.rs
quester/cluster/: Cargo.toml
quester/cluster/src/: cluster.rs  grpc_service.rs  lib.rs  member.rs  metrics.rs  node.rs  types.rs
quester/codegen/: Cargo.toml
quester/codegen/src/: codegen.rs
quester/common/: Cargo.toml
quester/common/src/: config.rs  error.rs  event_payload_types.rs  kill_switch.rs  lib.rs  metrics.rs  net.rs  progress.rs  quid.rs  runtimes.rs  sorted_iter.rs  storage_config.rs  stream_utils.rs  type_map.rs  utils.rs
quester/discovery/src/: service.rs
quester/engine_utils/src/: mod.rs
quester/engines/: Cargo.toml
quester/engines/src/: engines.rs  lib.rs  utils.rs
quester/ingestors/: Cargo.toml
quester/ingestors/src/: ingestor.rs  lib.rs
quester/insights/: Cargo.toml
quester/insights/src/: client.rs  error.rs  insight_utils.rs  insights.rs  lib.rs  service.rs  service_client.rs  types.rs
quester/insights_service/: Cargo.toml
quester/insights_service/src/: client.rs  lib.rs  service.rs
quester/llms/: Cargo.toml
quester/llms/src/: lib.rs  llm.rs  options.rs  utils.rs
quester/node/: Cargo.toml  build.rs
quester/node/src/: lib.rs  main.rs
quester/proto/: Cargo.toml  build.rs
quester/proto/src/: config.rs  error.rs  lib.rs
quester/querent/: Cargo.toml  build.rs  pyoxidizer.bzl
quester/querent/pytests/: quester_flow_tests.rs  test_basic.rs  test_workflow_manager.rs
quester/querent/src/: lib.rs
quester/sources/: Cargo.toml
quester/sources/src/: lib.rs  payload.rs  protocol.rs  source.rs  source_factory.rs  source_resolver.rs  types.rs
quester/storage/: Cargo.toml
quester/storage/sql/: discovered_knowledge.sql  embedded_knowledge.sql  insight_knowledge.sql  pg_vector_schema.sql  semantic_knowledge.sql
quester/storage/src/: lib.rs  storage.rs
quester/swarm/src/: cluster.rs  lib.rs  member.rs  node.rs  types.rs
tauri/rian/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: lib.rs  main.rs  windows.rs
(+721 files in other folders)
