[workspace]
resolver = "2"
members = ["sources", "ingestors", "engines", "llms", "insights", "actors", "common", "rian", "storage", "cluster", "node", "codegen", "proto",]

[profile.dev]
debug = false

[workspace.dependencies]
azure_core = { version = "0.13.0", features = ["enable_reqwest_rustls"] }
azure_storage = { version = "0.13.0", default-features = false, features = [
  "enable_reqwest_rustls",
] }
azure_storage_blobs = { version = "0.13.0", default-features = false, features = [
  "enable_reqwest_rustls",
] }
anyhow = "1"
arc-swap = "1.6"
assert-json-diff = "2"
async-speed-limit = "0.4"
async-trait = "0.1"
bincode = "1.3.3"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.21"
bytes = { version = "1", features = ["serde"] }
bytesize = { version = "1.3.0", features = ["serde"] }
bytestring = "1.3.0"
chrono = { version = "0.4.23", default-features = false, features = [
  "clock",
  "std",
] }
clap = { version = "4.4.1", features = ["env", "string"] }
colored = "2.0.0"
console-subscriber = "0.2.0"
criterion = { version = "0.5", features = ["async_tokio"] }
cron = "0.12.0"
dialoguer = "0.11.0"
dotenv = "0.15"
dyn-clone = "1.0.10"
enum-iterator = "1.4"
env_logger = "0.10"
fail = "0.5"
fastembed = { git = "https://github.com/Anush008/fastembed-rs", branch = "main" }
flume = "0.11"
fnv = "1"
futures = "0.3"
futures-util = { version = "0.3.25", default-features = false }
heck = "0.4.1"
hex = "0.4.3"
home = "0.5.4"
hostname = "0.3"
http = "0.2.9"
http-serde = "1.1.2"
humansize = "2.1.3"
humantime = "2.1.0"
hyper = { version = "0.14", features = [
  "client",
  "http1",
  "http2",
  "server",
  "stream",
  "tcp",
] }
hyper-rustls = { version = "0.24", features = ["http1", "http2"] }
indexmap = { version = "2.1.0", features = ["serde"] }
indicatif = "0.17.3"
itertools = "0.12"
json_comments = "0.2"
libz-sys = "1.1.8"
lru = "0.12"
lindera-core = "0.27.0"
lindera-dictionary = "0.27.0"
lindera-tokenizer = { version = "0.27.0", features = [
  "cc-cedict-compress",
  "cc-cedict",
  "ipadic-compress",
  "ipadic",
  "ko-dic-compress",
  "ko-dic",
] }
matches = "0.1.9"
md5 = "0.7"
mime_guess = "2.0.4"
mockall = "0.12"
new_string_template = "1.4.0"
nom = "7.1.3"
num_cpus = "1"
numfmt = "1.1.1"
once_cell = "1"
oneshot = "0.1.5"
openssl = { version = "0.10.60", default-features = false }
openssl-probe = "0.1.5"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14.0"
ouroboros = "0.18.0"
pin-project = "1.1.0"
pnet = { version = "0.34.0", features = ["std"] }
postcard = { version = "1.2.0", features = [
  "use-std",
], default-features = false }
predicates = "3"
prettyplease = "0.2.0"
proc-macro2 = "1.0.50"
prometheus = { version = "0.13", features = ["process"] }
proptest = "1"
prost = { version = "0.11.6", default-features = false, features = [
  "prost-derive",
] }
prost-build = "0.11.6"
prost-types = "0.11.6"
quote = "1.0.23"
rand = "0.8"
rand_distr = "0.4"
rayon = "1"
rdkafka = { version = "0.36", default-features = false, features = [
  "cmake-build",
  "libz",
  "ssl",
  "tokio",
  "zstd",
] }
regex = "1.10.0"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
  "stream",
] }
rust-embed = "8.1.0"
# ^1.0.184 due to serde-rs/serde#2538
serde = { version = "1.0.184", features = ["derive", "rc"] }
serde_json = "1.0.108"
serde_qs = { version = "0.12", features = ["warp"] }
serde_with = "3.4.0"
serde_yaml = "0.9"
siphasher = "1.0.0"
specta = { version = "=2.0.0-rc.20" }
syn = { version = "2.0.11", features = ["extra-traits", "full", "parsing"] }
sync_wrapper = "0.1.2"
tabled = { version = "0.14", features = ["color"] }
tempfile = "3"
termcolor = "1"
thiserror = "1"
thousands = "0.2.0"
tikv-jemalloc-ctl = "0.5"
tikv-jemallocator = "0.5"
time = { version = "0.3.17", features = ["std", "formatting", "macros"] }
tokio = { version = "1.34", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = "0.8.8"
tonic = { version = "0.9.0", features = ["gzip"] }
tonic-build = "0.9.0"
tower = { version = "0.4.13", features = [
  "balance",
  "buffer",
  "load",
  "retry",
  "util",
] }
tower-http = { version = "0.4.0", features = ["compression-gzip", "cors"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.20.0"
tracing-subscriber = { version = "0.3.16", features = [
  "env-filter",
  "std",
  "time",
] }
ttl_cache = "0.5"
typetag = "0.2"
ulid = "1.1"
username = "0.2"
utoipa = "4.1.0"
utoipa-swagger-ui = "6.0.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
vrl = { version = "0.8.1", default-features = false, features = [
  "compiler",
  "diagnostic",
  "stdlib",
  "value",
] }
warp = "0.3"
wiremock = "0.5"
zstd = "0.13.0"
log = { version = "^0.4.17", features = [
  "std",
  "max_level_debug",
  "release_max_level_debug"
] }
actors = { version = "1.1.0", path = "./actors" }
common = { version = "1.1.0", path = "./common" }
rian-core = { version = "1.1.0", path = "./rian" }
storage = { version = "1.1.0", path = "./storage" }
cluster = { version = "1.1.0", path = "./cluster" }
codegen = { version = "1.1.0", path = "./codegen" }
proto = { version = "1.1.0", path = "./proto" }
node = { version = "1.1.0", path = "./node" }
sources = { version = "1.1.0", path = "./sources" }
ingestors = { version = "1.1.0", path = "./ingestors" }
engines = { version = "1.1.0", path = "./engines" }
llms = { version = "1.1.0", path = "./llms" }
insights = { version = "1.1.0", path = "./insights" }
neo4rs = "0.7.0"
diesel-async = { version = "0.5.0", features = ["bb8", "postgres", "async-connection-wrapper"] }
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.10.0"
rustls = { version = "0.23.10", default-features = false, features = ["std", "ring"] }
diesel = "2.2.4"
diesel_migrations = "2.2.0"
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
chitchat = { git = "https://github.com/quickwit-oss/chitchat.git", rev = "a3e3f8b" }
crossbeam-channel = "0.5.10"
reqwest-eventsource = "0.6.0"
async-stream = "0.3.5"
async-openai = "0.20.0"
csv = "1.3.0"
url = "2.2.2"
tiktoken-rs = "0.5.8"
readability = "0.3.0"
text-splitter = { version = "0.8", features = ["tiktoken-rs","markdown"] }
urlencoding = "2.1.3"
tokenizers = "0.15.2"
pgvector = { version = "0.3", features = ["diesel", "postgres", "serde"] }
redb = "2.0.0"
rmp-serde = "1.1"

aws-config = {version =  "1.5.4", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-sdk-kinesis = "1.37"
aws-sdk-s3 = "1.42.0"
aws-smithy-runtime = "1.6.2"
aws-smithy-async = "1.2"
aws-smithy-client = "0.55.0"
aws-smithy-http = "0.55.0"
aws-smithy-types = { version = "1.2", features = ["byte-stream-poll-next"] }
aws-types = "1.3.3"
opendal = "0.44"
google-drive3 = "5.0.5+20240618"
tl = "0.7.8"
hf-hub = "0.3.2"
ordered-float = "4.2.0"
records = "0.2.0"
unicode-segmentation = "1.7"
xlsx_reader = "3.1.1"
xml = "0.8.20"
rusty-tesseract = { git = "https://github.com/louis030195/rusty-tesseract.git", branch = "main" }
imap = "2.4.1"
native-tls = "0.2"
mailparse = "0.15.0"
yup-oauth2 = "10.0.1"
oauth2 = "4.4.2"
zip = "2.2.0"
candle-core = { version = "0.5.0" }
candle-transformers = { version = "0.5.0" }
candle-nn = { version = "0.5.0" }
onedrive-api = "0.10.0"
secrecy = "0.8.0"
ollama-rs = { version = "0.2.0", features = [
    "stream",
    "chat-history",
] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2"}
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.7.2"}
typed-builder = "0.18.1"
derive_builder = "0.20.0"
derive-getters = "0.3.0"
sha2 = "0.10.8"
pdf-extract = { git = "https://github.com/Querent-ai/pdf-extract", branch = "master" }
lopdf = "0.33.0"
dirs = "5.0.1"
tauri-specta = { git ="https://github.com/oscartbeaumont/tauri-specta", branch = "main", features = ["derive", "javascript", "typescript"] }
specta-typescript = "=0.0.7"
specta-jsdoc = "=0.0.7"
lazy_static = "1.5.0"
rustls-native-certs = "0.8.0"
sqlx = { version = "0.8.2", default-features = false, features = ["postgres"] }
notion = "0.6.0"
openssl-sys = { version = "0.9.93", features = ["vendored"] }
slack-morphism = { version = "2.5.0", features = ["hyper"] }
hyper-util = "0.1.9"
surrealdb = { version = "1.5.4", features = ["kv-rocksdb"] }
image = "0.25.2"
aws-runtime = "1.3.1"
serial_test="0.5"
jira_query = "1.5.0"
tar = "0.4.42"
flate2 = "1.0.34"

# patch unicode-normalization to version 1.22.0
# TODO Querent to research on few third party crates
[patch.crates-io]
bip39 = { git = "https://github.com/saraswatpuneet/rust-bip39", branch = "master" }
rust_decimal = { git = 'https://github.com/paupino/rust-decimal.git' }
esaxx-rs = { git = "https://github.com/Querent-ai/esaxx-rs" }

[profile.release]
panic = "unwind"
lto = true
codegen-units = 1
strip = true
