[workspace]
resolver = "2"
members = ["actors", "common", "querent", "storage", "cluster", "node", "codegen", "proto", "insights"]

[profile.dev]
debug = false

[workspace.dependencies]
anyhow = "1"
arc-swap = "1.6"
assert-json-diff = "2"
async-speed-limit = "0.4"
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.21"
bytes = { version = "1", features = ["serde"] }
bytesize = { version = "1.3.0", features = ["serde"] }
bytestring = "1.3.0"
chrono = { version = "0.4.23", default-features = false, features = [
  "clock",
  "std",
] }
clap = { version = "4.4.1", features = ["env", "string"] }
colored = "2.0.0"
console-subscriber = "0.2.0"
criterion = { version = "0.5", features = ["async_tokio"] }
cron = "0.12.0"
dialoguer = "0.11.0"
dotenv = "0.15"
dyn-clone = "1.0.10"
enum-iterator = "1.4"
env_logger = "0.10"
fail = "0.5"
flume = "0.11"
fnv = "1"
futures = "0.3"
futures-util = { version = "0.3.25", default-features = false }
heck = "0.4.1"
hex = "0.4.3"
home = "0.5.4"
hostname = "0.3"
http = "0.2.9"
http-serde = "1.1.2"
humansize = "2.1.3"
humantime = "2.1.0"
hyper = { version = "0.14", features = [
  "client",
  "http1",
  "http2",
  "server",
  "stream",
  "tcp",
] }
hyper-rustls = "0.24"
indexmap = { version = "2.1.0", features = ["serde"] }
indicatif = "0.17.3"
itertools = "0.12"
json_comments = "0.2"
libz-sys = "1.1.8"
lru = "0.12"
lindera-core = "0.27.0"
lindera-dictionary = "0.27.0"
lindera-tokenizer = { version = "0.27.0", features = [
  "cc-cedict-compress",
  "cc-cedict",
  "ipadic-compress",
  "ipadic",
  "ko-dic-compress",
  "ko-dic",
] }
matches = "0.1.9"
md5 = "0.7"
mime_guess = "2.0.4"
mockall = "0.12"
new_string_template = "1.4.0"
nom = "7.1.3"
num_cpus = "1"
numfmt = "1.1.1"
once_cell = "1"
oneshot = "0.1.5"
openssl = { version = "0.10.60", default-features = false }
openssl-probe = "0.1.5"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14.0"
ouroboros = "0.18.0"
pin-project = "1.1.0"
pnet = { version = "0.34.0", features = ["std"] }
postcard = { version = "1.2.0", features = [
  "use-std",
], default-features = false }
predicates = "3"
prettyplease = "0.2.0"
proc-macro2 = "1.0.50"
prometheus = { version = "0.13", features = ["process"] }
proptest = "1"
prost = { version = "0.11.6", default-features = false, features = [
  "prost-derive",
] }
prost-build = "0.11.6"
prost-types = "0.11.6"
quote = "1.0.23"
rand = "0.8"
rand_distr = "0.4"
rayon = "1"
rdkafka = { version = "0.36", default-features = false, features = [
  "cmake-build",
  "libz",
  "ssl",
  "tokio",
  "zstd",
] }
regex = "1.10.0"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
rust-embed = "8.1.0"
# ^1.0.184 due to serde-rs/serde#2538
serde = { version = "1.0.184", features = ["derive", "rc"] }
serde_json = "1.0"
serde_qs = { version = "0.12", features = ["warp"] }
serde_with = "3.4.0"
serde_yaml = "0.9"
siphasher = "1.0.0"
syn = { version = "2.0.11", features = ["extra-traits", "full", "parsing"] }
sync_wrapper = "0.1.2"
tabled = { version = "0.14", features = ["color"] }
tempfile = "3"
termcolor = "1"
thiserror = "1"
thousands = "0.2.0"
tikv-jemalloc-ctl = "0.5"
tikv-jemallocator = "0.5"
time = { version = "0.3.17", features = ["std", "formatting", "macros"] }
tokio = { version = "1.34", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = "0.8.8"
tonic = { version = "0.9.0", features = ["gzip"] }
tonic-build = "0.9.0"
tower = { version = "0.4.13", features = [
  "balance",
  "buffer",
  "load",
  "retry",
  "util",
] }
tower-http = { version = "0.4.0", features = ["compression-gzip", "cors"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.20.0"
tracing-subscriber = { version = "0.3.16", features = [
  "env-filter",
  "std",
  "time",
] }
ttl_cache = "0.5"
typetag = "0.2"
ulid = "1.1"
username = "0.2"
utoipa = "4.1.0"
utoipa-swagger-ui = "6.0.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
vrl = { version = "0.8.1", default-features = false, features = [
  "compiler",
  "diagnostic",
  "stdlib",
  "value",
] }
warp = "0.3"
wiremock = "0.5"
zstd = "0.13.0"
log = { version = "^0.4.17", features = [
  "std",
  "max_level_debug",
  "release_max_level_debug"
] }
querent-synapse = { version = "3.0.5" }
actors = { version = "3.0.4", path = "./actors" }
common = { version = "3.0.4", path = "./common" }
querent = { version = "3.0.4", path = "./querent" }
storage = { version = "3.0.4", path = "./storage" }
cluster = { version = "3.0.4", path = "./cluster" }
codegen = { version = "3.0.4", path = "./codegen" }
proto = { version = "3.0.4", path = "./proto" }
discovery = {version = "3.0.4", path = "./insights"}
node = { version = "3.0.4", path = "./node" }

pyo3-asyncio = { version = "0.20.0", features = [
  "attributes",
  "tokio-runtime",
  "testing"
] }
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
milvus-sdk-rust = "0.1.0"
neo4rs = "0.7.0"
diesel-async = "0.4.1"
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.10.0"
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
diesel = "2.1.4"
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
chitchat = { git = "https://github.com/quickwit-oss/chitchat.git", rev = "a3e3f8b" }
crossbeam-channel = "0.5.10"
reqwest-eventsource = "0.6.0"
async-stream = "0.3.5"
async-openai = "0.20.0"
csv = "1.3.0"
url = "2.2.2"
lopdf = "0.32.0"
tiktoken-rs = "0.5.8"
readability = "0.3.0"
text-splitter = { version = "0.8", features = ["tiktoken-rs","markdown"] }
urlencoding = "2.1.3"
tokenizers = "0.15.2"
pgvector = { version = "0.3", features = ["diesel", "postgres"] }
redb = "2.0.0"
rmp-serde = "1.1"

[profile.release]
panic = "unwind"
lto = true
codegen-units = 1
strip = true
