[package]
name = "codegen"
version = "1.1.0"
authors = ["Querent AI LLC <contact@querent.xyz>"]
edition = "2021"
license = "BSL-1.1"
description = "A library for building and running querent AI workflows."
repository = "https://github.com/querent-ai/querent"
homepage = "https://querent.xyz/"
documentation = "https://querent.xyz/docs/"

[dependencies]
anyhow = { workspace = true }
heck = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
serde = { workspace = true }
