[package]
name = "common"
version = "0.9.0"
authors = ["Querent AI LLC <contact@querent.xyz>"]
edition = "2021"
license = "BSL-1.1"
description = "Util crate of querent"
repository = "https://github.com/querent-ai/querent"
homepage = "https://querent.xyz/"
documentation = "https://querent.xyz/docs/"

[dependencies]
anyhow = { workspace = true }
async-speed-limit = { workspace = true }
async-trait = { workspace = true }
bytesize = { workspace = true }
colored = { workspace = true }
dyn-clone = { workspace = true }
env_logger = { workspace = true }
fnv = { workspace = true }
futures = { workspace = true }
home = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-serde = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
pin-project = { workspace = true }
pnet = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
siphasher = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
urlencoding = { workspace = true }
stable_deref_trait = "1.2.0"

[features]
testsuite = []

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
