[package]
name = "node"
version = "4.2.0"
authors = ["Querent AI LLC <contact@querent.xyz>"]
edition = "2021"
license = "BSL-1.1"
description = "Querent Node: A node for the Querent network with CLI and REST API"
repository = "https://github.com/querent-ai/querent"
homepage = "https://querent.xyz/"
documentation = "https://querent.xyz/docs/"
default-run = "rian"

[[bin]]
name = "rian"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
console-subscriber = { workspace = true, optional = true }
dialoguer = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
numfmt = { workspace = true }
once_cell = { workspace = true }
openssl-probe = { workspace = true, optional = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tabled = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
thousands = { workspace = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
chitchat = { workspace = true }
warp = { workspace = true }
serde_qs = { workspace = true }
num_cpus = { workspace = true }
hyper = { workspace = true }
actors = { workspace = true }
common = { workspace = true }
rian = { workspace = true }
cluster = { workspace = true }
proto = { workspace = true }
engines = { workspace = true }
llms = { workspace = true }
insights = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
uuid = { workspace = true }
storage = { workspace = true }
futures-util = { workspace = true }
utoipa-swagger-ui = { workspace = true }
fastembed =  { workspace = true }
log = { workspace = true }
rustls = { workspace = true }
dirs = { workspace = true }

[build-dependencies]
time = { workspace = true }

[target.'cfg(target_os="windows")'.build-dependencies]
http_req = "0.7.0"
zip = { workspace = true }

[features]
openssl-support = ["openssl-probe"]
default = ["openssl-support"]
testsuite = []
console = ["console-subscriber"]
license-check = []