[package]
name = "proto"
version = "0.4.0"
authors = ["Querent AI LLC <contact@querent.xyz>"]
edition = "2021"
license = "BSL-1.1"
description = "A library for building and running querent AI workflows."
repository = "https://github.com/querent-ai/querent"
homepage = "https://querent.xyz/"
documentation = "https://querent.xyz/docs/"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
bytestring = { workspace = true }
dyn-clone = { workspace = true }
futures = { workspace = true, optional = true }
http = { workspace = true }
hyper = { workspace = true }
mockall = { workspace = true, optional = true }
opentelemetry = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }
http-serde = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
ulid = { workspace = true }
utoipa = { workspace = true }
zstd = { workspace = true }
actors = { workspace = true }
common = { workspace = true }
specta-typescript  = { workspace = true }
tauri-specta = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
mockall = { workspace = true }

[build-dependencies]
glob = "0.3.1"
prost-build = { workspace = true }
tonic-build = { workspace = true }
codegen = { workspace = true }


[features]
testsuite = []
