[package]
name = "cluster"
version = "0.0.1"
authors = ["Querent AI LLC <contact@querent.xyz>"]
edition = "2021"
license = "BSL-1.1"
description = "cluster for Querent AI inspired by quickwit-cluster"
repository = "https://github.com/querent-ai/querent"
homepage = "https://querent.xyz/"
documentation = "https:/querent.xyz/docs/"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
console-subscriber = { workspace = true, optional = true }
dialoguer = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
numfmt = { workspace = true }
once_cell = { workspace = true }
openssl-probe = { workspace = true, optional = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tabled = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
thousands = { workspace = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
num_cpus = { workspace = true }
chitchat = { workspace = true }
warp = { workspace = true }
serde_qs = { workspace = true }
hyper = { workspace = true }
milvus-sdk-rust= { workspace = true }
neo4rs = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
diesel-async = { workspace = true, features = [
  "postgres",
  "deadpool",
]}
diesel  = { workspace = true }
deadpool = { workspace = true }
rustls = { workspace = true }
log = { workspace = true }
futures-util = { workspace = true }
common ={ workspace = true }
